--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -3,54 +3,84 @@
 {% block main %}
     <div class="wrapper">
         <h1>プロフィール</h1>
-        <h3>メールアドレス:{{user.email}}</h3>
-        <h3>■ お気に入り授業</h3>
-        <ul>
-            {% for cl in user.favorite_class.all %}
-                <a href="{% url 'class' cl.id %}">
+        {% comment %} <div class="profile_detail">
+            <div>メールアドレス: {{user.email}}</div>
+            <div>
+                <p>お気に入り授業数</p>
+                <p>投稿コメント数</p>
+            </div>
+        </div> {% endcomment %}
+            <h3><i class="fas fa-square fa-fw my-blue"></i>お気に入り授業</h3>
+            <div class="class_w">
+                {% for cl in user.favorite_class.all %}
                     <div class="class_result">
-                        <div class="class_result_left">
-                            <h2>{{ cl.class_name }}</h2>
-                            <h5>{{ cl.teacher }}先生</h5>
-                        </div>
-                        <div class="class_result_middle">
-                            <ul>
-                                <li>{{ cl.year }}年度</li>
-                                <li>{{ cl.term }}</li>
-                                <li>{{ cl.place}}</li>
-                            </ul>
-                        </div>
-                        <div class="class_result_right">
-                            <ul>
-                                <li>いいね{{ cl.favorite }}</li>
-                            </ul>
-                        </div>
+                        <a href="{% url 'class' cl.id %}">
+                            <div class="class_result_content">
+                                <h2>
+                                    {{ cl.class_name }}
+                                    <span class='teacher_name'>{{ cl.teacher }}先生</span>                        
+                                </h2>
+                                <ul class="flex">
+                                    <li><i class="fas fa-heart fa-fw my-pink"></i>{{ cl.favorite }}</li>
+                                    <li><i class="far fa-comment fa-fw"></i>0</li>
+                                    <li>A率{{cl.a_ratio}}</li>
+                                    <li>評定平均{{cl.average_evaluation}}</li>
+                                </ul>
+                                <ul>
+                                    <li>{{ cl.year }}年</li>
+                                    <li>{{ cl.term }}</li>
+                                    <li>{{ cl.place}}</li>
+                                </ul>
+                            </div>
+                        </a>
                     </div>
-                </a>
-            {% empty %}
-                <p>お気に入りの授業がありません</p>
-            {% endfor %}
-        <h3>■ 投稿したコメント</h3>
-            {% for comment in mycomments%}
-                <a href="{% url 'class' comment.cl.id %}">
-                    <div class="recent_comment">
-                        <div class="recent_comment_left">
-                            <h2>{{comment.cl.class_name}}</h2>
-                            <h5>{{ comment.cl.teacher }}先生</h5>
-
-                        </div>
-                        <div class="recent_comment_middle">
-                            <p>{{comment.text}}</p>
-                        </div>
-                        <div class="recent_comment_right">
-                            {% comment %} <p>評価:<span class='star'>{{comment.get_star}}</span></p> {% endcomment %}
+                {% empty %}
+                    <p>おすすめクラスはありません</p>
+                {% endfor %}
+            </div>
+        <h3><i class="fas fa-square fa-fw my-blue"></i>投稿したコメント</h3>
+        <div class="comment_w">
+            {% for comment in mycomments %}
+                <div class="class_result">
+                    {% comment %} <a href="{% url 'class' comment.cl.id %}"> {% endcomment %}
+                        <div class="comment_result_content">
+                            <h2>
+                                {{comment.cl.class_name}}
+                                {% comment %} <span class='teacher_name'>{{ comment.cl.teacher }}先生</span>   {% endcomment %}
+                                <a class="remove_comment">コメント解除</a>
+                            </h2>
+                            
                             <span class="star">{{comment.get_star}}</span><span class="my-gray">{{comment.get_left_star}}</span>
+                            <p>{{comment.text}}</p>
+                            {% comment %} <a class="remove_comment">コメント解除</a>
+                            <div class="double_check hide">コメント解除</div> {% endcomment %}
                         </div>
-                    </div>
-                </a>
+                    {% comment %} </a> {% endcomment %}
+                </div>
             {% empty %}
-            <p>コメントはありません</p>
+                <p>コメントがありません</p>
             {% endfor %}
-        </ul>
     </div>
+
+
+
+
+
+    </div>
+
+<script
+        src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+        crossorigin="anonymous">
+</script>
+
+<script>
+    'use strict'
+    $(document).ready(function(){
+        $(".remove_comment").click(function(){
+            $(this).next().toggleClass("hide")
+        });
+    });
+
+</script>
 {% endblock main %}
