--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -3,59 +3,29 @@
 {% block main %}
     <div class="wrapper">
         <h1>プロフィール</h1>
-        {% comment %} <div class="profile_detail">
-            <div>メールアドレス: {{user.email}}</div>
-            <div>
-                <p>お気に入り授業数</p>
-                <p>投稿コメント数</p>
-            </div>
-        </div> {% endcomment %}
-            <h3><i class="fas fa-square fa-fw my-blue"></i>お気に入り授業</h3>
-            <div class="class_w">
-                {% for cl in user.favorite_class.all %}
-                    <div class="class_result">
-                        <a href="{% url 'class' cl.id %}">
-                            <div class="class_result_content">
-                                <h2>
-                                    {{ cl.class_name }}
-                                    <span class='teacher_name'>{{ cl.teacher }}先生</span>                        
-                                </h2>
-                                <ul class="flex">
-                                    <li><i class="fas fa-heart fa-fw my-pink"></i>{{ cl.favorite }}</li>
-                                    <li><i class="far fa-comment fa-fw"></i>0</li>
-                                    <li>A率{{cl.a_ratio}}</li>
-                                    <li>評定平均{{cl.average_evaluation}}</li>
-                                </ul>
-                                <ul>
-                                    <li>{{ cl.year }}年</li>
-                                    <li>{{ cl.term }}</li>
-                                    <li>{{ cl.place}}</li>
-                                </ul>
-                            </div>
-                        </a>
-                    </div>
-                {% empty %}
-                    <p>おすすめクラスはありません</p>
-                {% endfor %}
-            </div>
+        <h3><i class="fas fa-square fa-fw my-blue"></i>お気に入り授業</h3>
+        <div class="class_w"> 
+            {% for cl in user.favorite_class.all %}
+                {% include "_class_list.html" %}
+            {% empty %}
+                <p>お気に入り登録はありません</p>
+            {% endfor %}
+        </div>
+
+
         <h3><i class="fas fa-square fa-fw my-blue"></i>投稿したコメント</h3>
         <div class="comment_w">
             {% for comment in mycomments %}
                 <div class="class_result">
-                    {% comment %} <a href="{% url 'class' comment.cl.id %}"> {% endcomment %}
-                        <div class="comment_result_content">
-                            <h2>
-                                {{comment.cl.class_name}}
-                                {% comment %} <span class='teacher_name'>{{ comment.cl.teacher }}先生</span>   {% endcomment %}
-                                <a class="remove_comment">コメント解除</a>
-                            </h2>
-                            
-                            <span class="star">{{comment.get_star}}</span><span class="my-gray">{{comment.get_left_star}}</span>
-                            <p>{{comment.text}}</p>
-                            {% comment %} <a class="remove_comment">コメント解除</a>
-                            <div class="double_check hide">コメント解除</div> {% endcomment %}
-                        </div>
-                    {% comment %} </a> {% endcomment %}
+                    <div class="comment_result_content">
+                        <h2>
+                            {{comment.cl.class_name}}
+                            <a class="remove_comment" href={% url 'remove_comment'　comment.id %}>コメント解除</a>
+                        </h2>
+                        
+                        <span class="star">{{comment.get_star}}</span><span class="my-gray">{{comment.get_left_star}}</span>
+                        <p>{{comment.text}}</p>
+                    </div>
                 </div>
             {% empty %}
                 <p>コメントがありません</p>
@@ -68,19 +38,13 @@
 
     </div>
 
-<script
-        src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-        crossorigin="anonymous">
-</script>
+{% endblock main %}
 
+
+{% block javascript %}
 <script>
     'use strict'
     $(document).ready(function(){
-        $(".remove_comment").click(function(){
-            $(this).next().toggleClass("hide")
-        });
     });
-
 </script>
-{% endblock main %}
+{% endblock javascript %}
