--- a/dclass_application/static/css/main.css
+++ b/dclass_application/static/css/main.css
@@ -86,6 +86,20 @@ html {
     flex-wrap: wrap;
 }
 
+.class_a_average_evaluation {
+    /* background-color:#898989;  */
+    /* color: white; */
+    width: 48%;
+    box-sizing: border-box;
+    padding: 1px 12px;
+    margin: 0 1%;
+    border-radius: 10px;
+    border: 1px solid red;
+    color: red;
+    text-align: center;
+}
+
+
 .comment_w {
     display: flex;
     flex-wrap: wrap;
@@ -108,8 +122,28 @@ html {
 }
 
 .class_result_content {
-    padding: 10px;
+    padding: 15px;
     box-sizing: border-box;
+}
+
+.class_result_content ul li {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.class_result_content ul li:not(:last-child){
+    padding-bottom: 10px;
+}
+
+.class_result_content ul li:last-child {
+    /* margin-left: auto;
+    text-align: right; */
+    justify-content: flex-end;
+    /* margin-left: 10px; */
+}
+
+.class_result_content ul li:last-child p {
+    margin-left: 15px;
 }
 
 .comment_result_content {
@@ -132,6 +166,45 @@ html {
     box-shadow: 0 3px 6px -2px #000a3c33;
     transition: box-shadow .2s;
 }
+
+.tag {
+    background-color: var(--my-blue);
+    /* background-color: var(--my-star); */
+    /* border: 1px solid var(--my-blue); */
+    color: white;
+    /* color: black; */
+    padding: 3px 15px;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
+
+.tag:not(:last-child){
+    margin-right: 5px;
+}
+
+/* .tag {
+	display: inline-block;
+	margin: 0 .1em .6em 0;
+	padding: .6em;
+	line-height: 1;
+	text-decoration: none;
+	color: #0000ee;
+	background-color: #fff;
+	border: 1px solid #0000ee;
+	border-left: 5px solid #0000ee;
+} */
+
+
+/* .tag {
+	display: inline-block;
+	margin: 0 .1em .6em 0;
+	padding: .6em;
+	line-height: 1;
+	text-decoration: none;
+	color: #0000ee;
+	background-color: #fff;
+	border: 1px solid #0000ee;
+} */
 
 .class_result:hover {
     box-shadow: 0 6px 6px -2px #000a3c33;
