--- a/dclass_application/templates/base.html
+++ b/dclass_application/templates/base.html
@@ -1,5 +1,3 @@
-
-
 {% load static %}
 <!DOCTYPE html>
 <html lang="ja">
@@ -21,6 +19,15 @@
     {% endblock main %}
 </div>
 
+
+
+<script
+        src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+        crossorigin="anonymous">
+</script>
+
+{% block javascript %}{% endblock javascript %}
 
 
     
