--- a/dclass_application/templates/index.html
+++ b/dclass_application/templates/index.html
@@ -63,29 +63,9 @@
         <h1>おすすめ授業</h1>
         <div class="class_w">
             {% for cl in recommend_data %}
-                <div class="class_result">
-                    <a href="{% url 'class' cl.id %}">
-                        <div class="class_result_content">
-                            <h2>
-                                {{ cl.class_name }}
-                                <span class='teacher_name'>{{ cl.teacher }}先生</span>                        
-                            </h2>
-                            <ul class="flex">
-                                <li><i class="fas fa-heart fa-fw my-pink"></i>{{ cl.favorite }}</li>
-                                <li><i class="far fa-comment fa-fw"></i>0</li>
-                                <li>A率{{cl.a_ratio}}</li>
-                                <li>評定平均{{cl.average_evaluation}}</li>
-                            </ul>
-                            <ul>
-                                <li>{{ cl.year }}年</li>
-                                <li>{{ cl.term }}</li>
-                                <li>{{ cl.place}}</li>
-                            </ul>
-                        </div>
-                    </a>
-                </div>
+                {% include "_class_list.html" %}
             {% empty %}
-                <p>おすすめクラスはありません</p>
+                <p>おすすめの授業はありません</p>
             {% endfor %}
         </div>
     </div>
@@ -102,7 +82,6 @@
                             <span class='teacher_name'>{{ comment.cl.teacher }}先生</span>  
                             </h2>
                             <span class="star">{{comment.get_star}}</span><span class="my-gray">{{comment.get_left_star}}</span>
-                            <p>{{ comment.cl.teacher }}先生</p>
                             <p>{{comment.text}}</p>
                         </div>
                     </a>
